--- a/.github/workflows/ecs-ci-cd.yaml
+++ b/.github/workflows/ecs-ci-cd.yaml
@@ -22,7 +22,9 @@ env:
   ECS_TASK_DEFINITION: task-definition.json  # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: flask-api           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_ACCESS_KEY_ID: AKIASK5MCJP2HJGUUB6X
+  AWS_SECRET_ACCESS_KEY: an7Gkcl877prfaiD8YR2ooRzQhmi4f3hUz06a9Pf
+  # containerDefinitions section of your task definition
 
 jobs:
   deploy:
@@ -37,8 +39,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
