--- a/.github/workflows/ecs-ci-cd.yaml
+++ b/.github/workflows/ecs-ci-cd.yaml
@@ -30,7 +30,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    
+    environment: production
 
     steps:
       - name: Checkout
@@ -39,10 +39,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@62f4f872db3836360b72999f4b87f1ff13310f3a
